<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FirstApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name_label">Pseudo :</string>
    <string name="surname_label">Prénom :</string>
    <string name="name_value"></string>
    <string name="surname_value"></string>
    <string name="button_ok">OK</string>
    <string name="result"></string>
    <string name="reference">Je m\'appelle TOTO! :)</string>
    <string name="nb_meufs">Vous avez 3 meufs</string>
    <string name="new_girl">J\'ai une nouvelle copine</string>
    <string name="new_ex">J\'ai perdu une copine</string>
    <string name="bonus">bonus</string>
    <string name="title_activity_dessin">dessin</string>
    <string name="change_activity">Jouer</string>
    <string name="title_activity_victoire">Victoire</string>
    <string name="label_difficulté">Choix difficulté :</string>
    <string name="title_activity_scores">Scores</string>
    <string name="sensibilite_label">Choix sensibilité :</string>

</resources>
