<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reference"
        />

    <TextView
        android:id="@+id/text_afficheur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nb_meufs"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="30sp"
        />

   <Button
       android:id="@+id/new_meuf"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/new_girl"
       android:onClick="addCopine"
       />

   <Button
        android:id="@+id/new_ex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_ex"
       android:onClick="dellCopine"
        />


</LinearLayout>
