<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".FirstActivity"
    android:background="#012">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/container"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/name_label"
                android:id="@+id/textView"
                android:textColor="#789" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText"
                android:text="@string/name_value"
                android:layout_weight="1"
                android:textColor="#aaa"
                android:hint="ZeZeN"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/sensibilite_label"
                android:id="@+id/textView2"
                android:textColor="#ccc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/val_sensibilite"
                android:textColor="#159"
                android:textSize="25sp"
                android:text="1"
                android:layout_marginLeft="15dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sensibilite"
                android:max="4"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/label_difficulté"
                android:id="@+id/textView3"
                android:textColor="#ccc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/val_difficulte"
                android:textColor="#159"
                android:textSize="25sp"
                android:text="1"
                android:layout_marginLeft="15dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/difficulte"
                android:max="4"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/change_activity"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="#595" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="by ZeZeN, Tefa et benom"
            android:id="@+id/textView4"
            android:layout_marginTop="20dp"
            android:textStyle="italic"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#bbb" />

    </LinearLayout>

</RelativeLayout>
